# StudySage-

./: .gitignore  .replit  LICENSE  README.md  main.py  pyproject.toml  replit.md  studysage_bot.py
src/studysage/: __init__.py  bot.py
