[project]
name = "studysage-telegram-bot"
version = "1.0.0"
description = "StudySage - AI-powered Telegram study assistant using Google Gemini with multimodal capabilities"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "google-genai>=1.33.0",
    "python-telegram-bot>=22.3",
    "sift-stack-py>=0.8.5",
]
